# opengl-c-template

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  imgui.ini
lib/gfx/: CMakeLists.txt  gfx.h  index_buffer.c  shader.c  texture.c  vertex_arrax.c  vertex_buffer.c
lib/gui/: CMakeLists.txt  gui.h  gui_init.c  gui_render.c  gui_terminate.c  gui_update.c
lib/image/: CMakeLists.txt  image.h
lib/io/: CMakeLists.txt  io.h  read_file.c
lib/shader/: CMakeLists.txt  compile_shader.c  create_shader.c  read_shader.c  shader.h
lib/window/: CMakeLists.txt  get_window.c  window.h
shaders/fragment/: basic.glsl
shaders/vertex/: basic.glsl
src/: main.c
